feat: agregar variables suma

--- a/src/churn/C2001/workflow.ipynb
+++ b/src/churn/C2001/workflow.ipynb
@@ -867,6 +867,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear tabla con nuevas columnas\n",
+    "dataset <- copy(dataset)[, `:=`(\n",
+    "  mtarjeta_total_consumo           = suma_sin_null(mtarjeta_visa_consumo, mtarjeta_master_consumo),\n",
+    "  mtarjeta_total_debitos_automaticos = suma_sin_null(mtarjeta_visa_debitos_automaticos, mtarjeta_master_debitos_automaticos),\n",
+    "  mfinanciacionlimite_total = suma_sin_null(Master_mfinanciacion_limite, Visa_mfinanciacion_limite),\n",
+    "  msaldopesos_total         = suma_sin_null(Master_msaldopesos, Visa_msaldopesos),\n",
+    "  msaldodolares_total       = suma_sin_null(Master_msaldodolares, Visa_msaldodolares),\n",
+    "  mconsumopesos_total       = suma_sin_null(Master_mconsumospesos, Visa_mconsumospesos),\n",
+    "  mconsumodolares_total     = suma_sin_null(Master_mconsumosdolares, Visa_mconsumosdolares),\n",
+    "  mlimitecompra_total       = suma_sin_null(Master_mlimitecompra, Visa_mlimitecompra),\n",
+    "  madelantopesos_total      = suma_sin_null(Master_madelantopesos, Visa_madelantopesos),\n",
+    "  madelantodolares_total   = suma_sin_null(Master_madelantodolares, Visa_madelantodolares),\n",
+    "  madelanto_total           = suma_sin_null(madelantodolares_total, madelantopesos_total),\n",
+    "  mpagado_total            = suma_sin_null(Master_mpagado, Visa_mpagado),\n",
+    "  mpagopesos_total        = suma_sin_null(Master_mpagospesos, Visa_mpagospesos),\n",
+    "  mpagosdolares_total      = suma_sin_null(Master_mpagosdolares, Visa_mpagosdolares),\n",
+    "  msaldototal_total         = suma_sin_null(Master_msaldototal, Visa_msaldototal),\n",
+    "  mconsumototal_total       = suma_sin_null(Master_mconsumototal, Visa_mconsumototal),\n",
+    "  cconsumos_total          = suma_sin_null(Master_cconsumos, Visa_cconsumos),\n",
+    "  delinquency_total          = suma_sin_null(Master_delinquency, Visa_delinquency)\n",
+    ")]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
