feat: add ratios and proportions

--- a/src/churn/C2001/workflow.ipynb
+++ b/src/churn/C2001/workflow.ipynb
@@ -543,9 +543,9 @@
     }
    ],
    "source": [
-    "dq2 <- ver_meses_rotos(dataset, month_col = \"foto_mes\", exclude = c(\"numero_de_cliente\", \"clase_ternaria\"))\n",
+    "dq <- ver_meses_rotos(dataset, month_col = \"foto_mes\", exclude = c(\"numero_de_cliente\", \"clase_ternaria\"))\n",
     "\n",
-    "salida_ceros2 <- dq2$detalle[\n",
+    "salida_ceros <- dq$detalle[\n",
     "  pct_zero == 1, \n",
     "  .(\n",
     "    meses_100_cero = .N,\n",
@@ -554,8 +554,8 @@
     "  by = variable\n",
     "][order(-meses_100_cero, variable)]\n",
     "\n",
-    "salida_ceros2[]# Por si 'variable' vino como factor\n",
-    "salida_ceros2[, variable := as.character(variable)]\n"
+    "salida_ceros[]# Por si 'variable' vino como factor\n",
+    "salida_ceros[, variable := as.character(variable)]\n"
    ]
   },
   {
@@ -606,9 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Data Drifting"
    ]
@@ -678,6 +676,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Suma de variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -685,25 +690,46 @@
    "source": [
     "# Crear tabla con nuevas columnas\n",
     "dataset <- copy(dataset)[, `:=`(\n",
-    "  mtarjeta_total_consumo           = suma_sin_null(mtarjeta_visa_consumo, mtarjeta_master_consumo),\n",
-    "  mtarjeta_total_debitos_automaticos = suma_sin_null(mtarjeta_visa_debitos_automaticos, mtarjeta_master_debitos_automaticos),\n",
-    "  mfinanciacionlimite_total = suma_sin_null(Master_mfinanciacion_limite, Visa_mfinanciacion_limite),\n",
-    "  msaldopesos_total         = suma_sin_null(Master_msaldopesos, Visa_msaldopesos),\n",
-    "  msaldodolares_total       = suma_sin_null(Master_msaldodolares, Visa_msaldodolares),\n",
-    "  mconsumopesos_total       = suma_sin_null(Master_mconsumospesos, Visa_mconsumospesos),\n",
-    "  mconsumodolares_total     = suma_sin_null(Master_mconsumosdolares, Visa_mconsumosdolares),\n",
-    "  mlimitecompra_total       = suma_sin_null(Master_mlimitecompra, Visa_mlimitecompra),\n",
-    "  madelantopesos_total      = suma_sin_null(Master_madelantopesos, Visa_madelantopesos),\n",
-    "  madelantodolares_total   = suma_sin_null(Master_madelantodolares, Visa_madelantodolares),\n",
-    "  madelanto_total           = suma_sin_null(madelantodolares_total, madelantopesos_total),\n",
-    "  mpagado_total            = suma_sin_null(Master_mpagado, Visa_mpagado),\n",
-    "  mpagopesos_total        = suma_sin_null(Master_mpagospesos, Visa_mpagospesos),\n",
-    "  mpagosdolares_total      = suma_sin_null(Master_mpagosdolares, Visa_mpagosdolares),\n",
-    "  msaldototal_total         = suma_sin_null(Master_msaldototal, Visa_msaldototal),\n",
-    "  mconsumototal_total       = suma_sin_null(Master_mconsumototal, Visa_mconsumototal),\n",
-    "  cconsumos_total          = suma_sin_null(Master_cconsumos, Visa_cconsumos),\n",
-    "  delinquency_total          = suma_sin_null(Master_delinquency, Visa_delinquency)\n",
+    "      mtarjeta_total_consumo           = suma_sin_null(mtarjeta_visa_consumo, mtarjeta_master_consumo),\n",
+    "      mtarjeta_total_debitos_automaticos = suma_sin_null(mtarjeta_visa_debitos_automaticos, mtarjeta_master_debitos_automaticos),\n",
+    "      mfinanciacionlimite_total = suma_sin_null(Master_mfinanciacion_limite, Visa_mfinanciacion_limite),\n",
+    "      msaldopesos_total         = suma_sin_null(Master_msaldopesos, Visa_msaldopesos),\n",
+    "      msaldodolares_total       = suma_sin_null(Master_msaldodolares, Visa_msaldodolares),\n",
+    "      mconsumopesos_total       = suma_sin_null(Master_mconsumospesos, Visa_mconsumospesos),\n",
+    "      mconsumodolares_total     = suma_sin_null(Master_mconsumosdolares, Visa_mconsumosdolares),\n",
+    "      mlimitecompra_total       = suma_sin_null(Master_mlimitecompra, Visa_mlimitecompra),\n",
+    "      madelantopesos_total      = suma_sin_null(Master_madelantopesos, Visa_madelantopesos),\n",
+    "      madelantodolares_total   = suma_sin_null(Master_madelantodolares, Visa_madelantodolares),\n",
+    "      madelanto_total           = suma_sin_null(madelantodolares_total, madelantopesos_total),\n",
+    "      mpagado_total            = suma_sin_null(Master_mpagado, Visa_mpagado),\n",
+    "      mpagopesos_total        = suma_sin_null(Master_mpagospesos, Visa_mpagospesos),\n",
+    "      mpagosdolares_total      = suma_sin_null(Master_mpagosdolares, Visa_mpagosdolares),\n",
+    "      msaldototal_total         = suma_sin_null(Master_msaldototal, Visa_msaldototal),\n",
+    "      mconsumototal_total       = suma_sin_null(Master_mconsumototal, Visa_mconsumototal),\n",
+    "      cconsumos_total          = suma_sin_null(Master_cconsumos, Visa_cconsumos),\n",
+    "      delinquency_total          = suma_sin_null(Master_delinquency, Visa_delinquency),\n",
+    "    mplazofijo_total = suma_sin_null(mplazo_fijo_dolares, mplazo_fijo_pesos),\n",
+    "    mpayroll_total = suma_sin_null(mpayroll, mpayroll2),\n",
+    "    minversion1_total = suma_sin_null(minversion1_dolares, minversion1_pesos),\n",
+    "    cpayroll_total = suma_sin_null(cpayroll_trx, cpayroll2_trx),\n",
+    "    cseguros_total= (suma_sin_null(suma_sin_null(cseguro_vida, cseguro_auto), cseguro_vivienda), cseguro_accidentes_personales)\n",
     ")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Proprociones de variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_divisiones_dt(DT, pairs_promedios, default_mode = \"promedio\")\n"
    ]
   },
   {
