--- a/src/churn/C2001/workflow.ipynb
+++ b/src/churn/C2001/workflow.ipynb
@@ -4765,7 +4765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -4977,6 +4977,40 @@
      "output_type": "stream",
      "text": [
       "[mbo] 8: num_iterations=99; learning_rate=0.498; feature_fraction=0.32; min_data_in_leaf=1; num_leaves=26 : y = 3.86e+08 : 357.2 secs : infill_ei\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20251111.020452\tbinary\tcustom\tTRUE\tTRUE\tFALSE\t-100\tTRUE\t159773\tFALSE\t-1\t0\t0.001\t0\t0\t1\t1\t1\tFALSE\t1\t0.1\t50\t0.5\t31\t2191\t0.0360729464511529\t0.644002612876116\t11\t1020\t29\t403011724.137931\t1148.3528592724\t395600383.141762\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[mbo] 9: num_iterations=2191; learning_rate=0.0361; feature_fraction=0.644; min_data_in_leaf=11; num_leaves=1020 : y = 3.96e+08 : 24479.4 secs : infill_ei\n",
+      "\n",
+      "Saved the current state after iteration 10 in the file bayesiana.RDATA.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20251111.024244\tbinary\tcustom\tTRUE\tTRUE\tFALSE\t-100\tTRUE\t159773\tFALSE\t-1\t0\t0.001\t0\t0\t1\t1\t1\tFALSE\t1\t0.1\t50\t0.5\t31\t734\t0.0442358641719183\t0.0510734066827311\t5\t541\t30\t404169305.347326\t0\t404169305.347326\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[mbo] 10: num_iterations=734; learning_rate=0.0442; feature_fraction=0.0511; min_data_in_leaf=5; num_leaves=541 : y = 4.04e+08 : 2265.3 secs : infill_ei\n",
+      "\n",
+      "Saved the current state after iteration 11 in the file bayesiana.RDATA.\n",
       "\n"
      ]
     }
