--- a/src/churn/C2000/wokflow-test-APO-ks30-rp1.ipynb
+++ b/src/churn/C2000/wokflow-test-APO-ks30-rp1.ipynb
@@ -57,7 +57,7 @@
     {
      "data": {
       "text/plain": [
-       "[1] \"2025-11-11 04:26:45 UTC\""
+       "[1] \"2025-11-12 01:15:05 UTC\""
       ]
      },
      "metadata": {},
@@ -72,8 +72,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td> 658628</td><td>35.2</td><td>1454640</td><td>77.7</td><td>1319931</td><td>70.5</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>1222316</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975146</td><td>15.1</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 658633</td><td>35.2</td><td>1454700</td><td>77.7</td><td>1227786</td><td>65.6</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1222301</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975146</td><td>15.1</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -82,8 +82,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &  658628 & 35.2 & 1454640 & 77.7 & 1319931 & 70.5\\\\\n",
-       "\tVcells & 1222316 &  9.4 & 8388608 & 64.0 & 1975146 & 15.1\\\\\n",
+       "\tNcells &  658633 & 35.2 & 1454700 & 77.7 & 1227786 & 65.6\\\\\n",
+       "\tVcells & 1222301 &  9.4 & 8388608 & 64.0 & 1975146 & 15.1\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -92,14 +92,14 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |  658628 | 35.2 | 1454640 | 77.7 | 1319931 | 70.5 |\n",
-       "| Vcells | 1222316 |  9.4 | 8388608 | 64.0 | 1975146 | 15.1 |\n",
+       "| Ncells |  658633 | 35.2 | 1454700 | 77.7 | 1227786 | 65.6 |\n",
+       "| Vcells | 1222301 |  9.4 | 8388608 | 64.0 | 1975146 | 15.1 |\n",
        "\n"
       ],
       "text/plain": [
        "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-       "Ncells  658628 35.2 1454640    77.7 1319931  70.5\n",
-       "Vcells 1222316  9.4 8388608    64.0 1975146  15.1"
+       "Ncells  658633 35.2 1454700    77.7 1227786  65.6\n",
+       "Vcells 1222301  9.4 8388608    64.0 1975146  15.1"
       ]
      },
      "metadata": {},
@@ -115,18 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "PARAM <- list()\n",
-    "PARAM$experimento <- \"APO-C2000\"\n",
+    "PARAM$experimento <- \"APO-C2000-202106\"\n",
     "PARAM$semilla_primigenia <- 100271"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "P863YZB9R1Ua"
    },
@@ -162,7 +162,7 @@
     {
      "data": {
       "text/plain": [
-       "[1] \"2025-11-11 04:26:51 UTC\""
+       "[1] \"2025-11-12 01:15:20 UTC\""
       ]
      },
      "metadata": {},
@@ -185,8 +185,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td>   767477</td><td>  41.0</td><td>   1454640</td><td>  77.7</td><td>  1454640</td><td>  77.7</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>722145113</td><td>5509.6</td><td>1017395640</td><td>7762.2</td><td>845998393</td><td>6454.5</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td>   767477</td><td>  41.0</td><td>   1454700</td><td>  77.7</td><td>  1454700</td><td>  77.7</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>722145115</td><td>5509.6</td><td>1017395650</td><td>7762.2</td><td>845998401</td><td>6454.5</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -195,8 +195,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &    767477 &   41.0 &    1454640 &   77.7 &   1454640 &   77.7\\\\\n",
-       "\tVcells & 722145113 & 5509.6 & 1017395640 & 7762.2 & 845998393 & 6454.5\\\\\n",
+       "\tNcells &    767477 &   41.0 &    1454700 &   77.7 &   1454700 &   77.7\\\\\n",
+       "\tVcells & 722145115 & 5509.6 & 1017395650 & 7762.2 & 845998401 & 6454.5\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -205,14 +205,14 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |    767477 |   41.0 |    1454640 |   77.7 |   1454640 |   77.7 |\n",
-       "| Vcells | 722145113 | 5509.6 | 1017395640 | 7762.2 | 845998393 | 6454.5 |\n",
+       "| Ncells |    767477 |   41.0 |    1454700 |   77.7 |   1454700 |   77.7 |\n",
+       "| Vcells | 722145115 | 5509.6 | 1017395650 | 7762.2 | 845998401 | 6454.5 |\n",
        "\n"
       ],
       "text/plain": [
        "       used      (Mb)   gc trigger (Mb)   max used  (Mb)  \n",
-       "Ncells    767477   41.0    1454640   77.7   1454640   77.7\n",
-       "Vcells 722145113 5509.6 1017395640 7762.2 845998393 6454.5"
+       "Ncells    767477   41.0    1454700   77.7   1454700   77.7\n",
+       "Vcells 722145115 5509.6 1017395650 7762.2 845998401 6454.5"
       ]
      },
      "metadata": {},
@@ -221,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "[1] \"2025-11-11 04:27:29 UTC\""
+       "[1] \"2025-11-12 01:15:52 UTC\""
       ]
      },
      "metadata": {},
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
