--- a/src/churn/C2003/APO_zlgbm_202106.ipynb
+++ b/src/churn/C2003/APO_zlgbm_202106.ipynb
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1] \"2025-11-12 16:59:06 UTC\""
+       "[1] \"2025-11-13 02:23:04 UTC\""
       ]
      },
      "metadata": {},
@@ -72,8 +72,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td>  2022680</td><td> 108.1</td><td>   3608172</td><td>  192.7</td><td>   3608172</td><td>  192.7</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>519165688</td><td>3961.0</td><td>7175451455</td><td>54744.4</td><td>6302975712</td><td>48087.9</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 658645</td><td>35.2</td><td>1454654</td><td>77.7</td><td>1397099</td><td>74.7</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1222321</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975147</td><td>15.1</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -82,8 +82,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &   2022680 &  108.1 &    3608172 &   192.7 &    3608172 &   192.7\\\\\n",
-       "\tVcells & 519165688 & 3961.0 & 7175451455 & 54744.4 & 6302975712 & 48087.9\\\\\n",
+       "\tNcells &  658645 & 35.2 & 1454654 & 77.7 & 1397099 & 74.7\\\\\n",
+       "\tVcells & 1222321 &  9.4 & 8388608 & 64.0 & 1975147 & 15.1\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -92,14 +92,14 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |   2022680 |  108.1 |    3608172 |   192.7 |    3608172 |   192.7 |\n",
-       "| Vcells | 519165688 | 3961.0 | 7175451455 | 54744.4 | 6302975712 | 48087.9 |\n",
+       "| Ncells |  658645 | 35.2 | 1454654 | 77.7 | 1397099 | 74.7 |\n",
+       "| Vcells | 1222321 |  9.4 | 8388608 | 64.0 | 1975147 | 15.1 |\n",
        "\n"
       ],
       "text/plain": [
-       "       used      (Mb)   gc trigger (Mb)    max used   (Mb)   \n",
-       "Ncells   2022680  108.1    3608172   192.7    3608172   192.7\n",
-       "Vcells 519165688 3961.0 7175451455 54744.4 6302975712 48087.9"
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  658645 35.2 1454654    77.7 1397099  74.7\n",
+       "Vcells 1222321  9.4 8388608    64.0 1975147  15.1"
       ]
      },
      "metadata": {},
@@ -115,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "source(\"/home/vickydiliscia/dmeyf2025/src/churn/C2003/config-APO2003-C202106.r\")"
+    "source(\"/home/vickydiliscia/dmeyf2025/src/churn/C2003/config-APO2003-202106.r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {
     "id": "P863YZB9R1Ua"
    },
@@ -203,7 +203,7 @@
     {
      "data": {
       "text/plain": [
-       "[1] \"2025-11-12 16:59:10 UTC\""
+       "[1] \"2025-11-13 02:23:44 UTC\""
       ]
      },
      "metadata": {},
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,9 +592,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-13 02:24:25 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# el mes 1,2, ..12 , podria servir para detectar estacionalidad\n",
     "dataset[, kmes := foto_mes %% 100]\n",
@@ -622,9 +632,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: Rcpp\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if( !require(\"Rcpp\")) install.packages(\"Rcpp\", repos = \"http://cran.us.r-project.org\")\n",
     "require(\"Rcpp\")"
@@ -632,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,12 +1132,12 @@
     "PARAM$train_final$meses <- c(\n",
     "  201901, 201902, 201903, 201904, 201905, 201906,\n",
     "  201907, 201908, 201909, 201910, 201911, 201912,\n",
-    "  202001, 202002, 202003,\n",
+    "  202001, 202002, 202003, 202004, 202005, 202006,\n",
     "  202007, 202008, 202009, 202010, 202011, 202012,\n",
     "  202101, 202102, 202103, 202104\n",
     ")\n",
     "\n",
-    "PARAM$train_final$undersampling <- 0.50"
+    "PARAM$train_final$undersampling <- 0.10"
    ]
   },
   {
