--- a/src/churn/C2010/APO_zlgbm_C2010_2106.ipynb
+++ b/src/churn/C2010/APO_zlgbm_C2010_2106.ipynb
@@ -82,26 +82,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "source(\"/home/vickydiliscia/dmeyf2025/src/churn/C2002/config.r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "source(PARAM$utils$promedios)\n",
-    "source(PARAM$utils$ratios)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source(\"/home/vickydiliscia/dmeyf2025/src/churn/C2010/config/_index.R\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#source(PARAM$utils$promedios)\n",
+    "#source(PARAM$utils$ratios)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +113,8 @@
       "Sourcing: add_ratio.R\n",
       "\n",
       "Sourcing: agregar_clase_ternaria.R\n",
+      "\n",
+      "Sourcing: aplicar_dataquality_zeros.R\n",
       "\n",
       "Sourcing: crear_proporcion.R\n",
       "\n",
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "id": "P863YZB9R1Ua"
    },
@@ -170,34 +172,12 @@
     {
      "data": {
       "text/plain": [
-       "[1] \"2025-11-10 23:48:06 UTC\""
+       "[1] \"2025-11-13 17:53:49 UTC\""
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "Sys.time()\n",
-    "require( \"data.table\" )\n",
-    "# leo el dataset\n",
-    "dataset <- fread(PARAM$paths$datasetcrudo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset <- agregar_clase_ternaria(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -480,6 +460,12 @@
     }
    ],
    "source": [
+    "Sys.time()\n",
+    "require( \"data.table\" )\n",
+    "dataset <- fread(PARAM$paths$datasetcrudo)\n",
+    "\n",
+    "dataset <- agregar_clase_ternaria(dataset)\n",
+    "\n",
     "setorder( dataset, foto_mes, clase_ternaria, numero_de_cliente)\n",
     "dataset[, .N, list(foto_mes, clase_ternaria)]"
    ]
@@ -491,14 +477,6 @@
    },
    "source": [
     "### Eliminacion de Features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Completar a gusto LUEGO de realizar un analisis exploratorio de datos.\n",
-    "<br> No necesariamente en esta Segunda Competencia conviele eliminar los mismos campos que en la Primera ..."
    ]
   },
   {
