--- a/src/churn/C2010/APO_zlgbm_C2010_2106.ipynb
+++ b/src/churn/C2010/APO_zlgbm_C2010_2106.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1372,14 +1372,14 @@
     }
    ],
    "source": [
-    "if (isTRUE(PARAM$features$kmes)) {\n",
+    "if (isTRUE(PARAM$FE_intrames$kmes)) {\n",
     "  dataset[, kmes := foto_mes %% 100]\n",
     "  message(\"Columna kmes creada\")\n",
     "} else {\n",
     "  message(\"Columna kmes no creada\")\n",
     "}\n",
     "\n",
-    "if (isTRUE(PARAM$features$normquarter)) {\n",
+    "if (isTRUE(PARAM$FE_intrames$normquarter)) {\n",
     "  dataset <- normalizar_ctrx_quarter(dataset)\n",
     "  message(\"Normalizacion ctrx_quarter aplicada\")\n",
     "} else {\n",
@@ -1580,20 +1580,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ℹ️ No hay filas activas en spec; nada que aplicar.\n",
+      "✅ 'mtarjeta_total_consumo' = suma_segura(mtarjeta_visa_consumo+mtarjeta_master_consumo)\n",
+      "\n",
+      "✅ 'mtarjeta_total_debitos_automaticos' = suma_segura(mttarjeta_visa_debitos_automaticos+mttarjeta_master_debitos_automaticos)\n",
+      "\n",
+      "✅ 'mfinanciacionlimite_total' = suma_segura(Master_mfinanciacion_limite+Visa_mfinanciacion_limite)\n",
+      "\n",
+      "✅ 'msaldopesos_total' = suma_segura(Master_msaldopesos+Visa_msaldopesos)\n",
+      "\n",
+      "✅ 'msaldodolares_total' = suma_segura(Master_msaldodolares+Visa_msaldodolares)\n",
+      "\n",
+      "✅ 'mconsumopesos_total' = suma_segura(Master_mconsumospesos+Visa_mconsumospesos)\n",
+      "\n",
+      "✅ 'mconsumodolares_total' = suma_segura(Master_mconsumosdolares+Visa_mconsumosdolares)\n",
+      "\n",
+      "✅ 'mlimitecompra_total' = suma_segura(Master_mlimitecompra+Visa_mlimitecompra)\n",
+      "\n",
+      "✅ 'madelantopesos_total' = suma_segura(Master_madelantopesos+Visa_madelantopesos)\n",
+      "\n",
+      "✅ 'madelantodolares_total' = suma_segura(Master_madelantodolares+Visa_madelantodolares)\n",
+      "\n",
+      "✅ 'madelanto_total' = suma_segura(Master_madelantopesos+Visa_madelantopesos+Master_madelantodolares+Visa_madelantodolares)\n",
+      "\n",
+      "✅ 'pagado_total' = suma_segura(Master_mpagado+Visa_mpagado)\n",
+      "\n",
+      "✅ 'mpagopesos_total' = suma_segura(Master_mpagospesos+Visa_mpagospesos)\n",
+      "\n",
+      "✅ 'mpagosdolares_total' = suma_segura(Master_mpagosdolares+Visa_mpagosdolares)\n",
+      "\n",
+      "✅ 'msaldototal_total' = suma_segura(Master_msaldototal+Visa_msaldototal)\n",
+      "\n",
+      "✅ 'mconsumototal_total' = suma_segura(Master_mconsumototal+Visa_mconsumototal)\n",
+      "\n",
+      "✅ 'cconsumos_total' = suma_segura(Master_cconsumos+Visa_cconsumos)\n",
+      "\n",
+      "✅ 'delinquency_total' = suma_segura(Master_delinquency+Visa_delinquency)\n",
+      "\n",
+      "✅ 'mplazofijo_total' = suma_segura(mplazo_fijo_dolares+mplazo_fijo_pesos)\n",
+      "\n",
+      "✅ 'mpayroll_total' = suma_segura(mpayroll+mpayroll2)\n",
+      "\n",
+      "✅ 'minversion1_total' = suma_segura(minversion1_dolares+minversion1_pesos)\n",
+      "\n",
+      "✅ 'cpayroll_total' = suma_segura(cpayroll_trx+cpayroll2_trx)\n",
+      "\n",
+      "✅ 'cseguros_total' = suma_segura(cseguro_vida+cseguro_auto+cseguro_vivienda+cseguro_accidentes_personales)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "spec_sumas <- fread(PARAM$paths$specsumas)\n",
+    "spec_sumas <- fread(PARAM$FE_intrames$specsumas)\n",
     "\n",
     "# Normalizar nombres de columnas\n",
     "setnames(spec_sumas, tolower(names(spec_sumas)))\n",
@@ -1631,195 +1675,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading required package: Rcpp\n",
+      "Lags no aplicados\n",
+      "\n",
+      "Delta Lags no aplicados\n",
       "\n"
      ]
-    }
-   ],
-   "source": [
-    "if( !require(\"Rcpp\")) install.packages(\"Rcpp\", repos = \"http://cran.us.r-project.org\")\n",
-    "require(\"Rcpp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# se calculan para los 6 meses previos el minimo, maximo y\n",
-    "#  tendencia calculada con cuadrados minimos\n",
-    "# la formula de calculo de la tendencia puede verse en\n",
-    "#  https://stats.libretexts.org/Bookshelves/Introductory_Statistics/Book%3A_Introductory_Statistics_(Shafer_and_Zhang)/10%3A_Correlation_and_Regression/10.04%3A_The_Least_Squares_Regression_Line\n",
-    "# para la maxíma velocidad esta funcion esta escrita en lenguaje C,\n",
-    "# y no en la porqueria de R o Python\n",
-    "\n",
-    "cppFunction(\"NumericVector fhistC(NumericVector pcolumna, IntegerVector pdesde )\n",
-    "{\n",
-    "  /* Aqui se cargan los valores para la regresion */\n",
-    "  double  x[100] ;\n",
-    "  double  y[100] ;\n",
-    "\n",
-    "  int n = pcolumna.size();\n",
-    "  NumericVector out( 5*n );\n",
-    "\n",
-    "  for(int i = 0; i < n; i++)\n",
-    "  {\n",
-    "    //lag\n",
-    "    if( pdesde[i]-1 < i )  out[ i + 4*n ]  =  pcolumna[i-1] ;\n",
-    "    else                   out[ i + 4*n ]  =  NA_REAL ;\n",
-    "\n",
-    "\n",
-    "    int  libre    = 0 ;\n",
-    "    int  xvalor   = 1 ;\n",
-    "\n",
-    "    for( int j= pdesde[i]-1;  j<=i; j++ )\n",
-    "    {\n",
-    "       double a = pcolumna[j] ;\n",
-    "\n",
-    "       if( !R_IsNA( a ) )\n",
-    "       {\n",
-    "          y[ libre ]= a ;\n",
-    "          x[ libre ]= xvalor ;\n",
-    "          libre++ ;\n",
-    "       }\n",
-    "\n",
-    "       xvalor++ ;\n",
-    "    }\n",
-    "\n",
-    "    /* Si hay al menos dos valores */\n",
-    "    if( libre > 1 )\n",
-    "    {\n",
-    "      double  xsum  = x[0] ;\n",
-    "      double  ysum  = y[0] ;\n",
-    "      double  xysum = xsum * ysum ;\n",
-    "      double  xxsum = xsum * xsum ;\n",
-    "      double  vmin  = y[0] ;\n",
-    "      double  vmax  = y[0] ;\n",
-    "\n",
-    "      for( int h=1; h<libre; h++)\n",
-    "      {\n",
-    "        xsum  += x[h] ;\n",
-    "        ysum  += y[h] ;\n",
-    "        xysum += x[h]*y[h] ;\n",
-    "        xxsum += x[h]*x[h] ;\n",
-    "\n",
-    "        if( y[h] < vmin )  vmin = y[h] ;\n",
-    "        if( y[h] > vmax )  vmax = y[h] ;\n",
-    "      }\n",
-    "\n",
-    "      out[ i ]  =  (libre*xysum - xsum*ysum)/(libre*xxsum -xsum*xsum) ;\n",
-    "      out[ i + n ]    =  vmin ;\n",
-    "      out[ i + 2*n ]  =  vmax ;\n",
-    "      out[ i + 3*n ]  =  ysum / libre ;\n",
-    "    }\n",
-    "    else\n",
-    "    {\n",
-    "      out[ i       ]  =  NA_REAL ;\n",
-    "      out[ i + n   ]  =  NA_REAL ;\n",
-    "      out[ i + 2*n ]  =  NA_REAL ;\n",
-    "      out[ i + 3*n ]  =  NA_REAL ;\n",
-    "    }\n",
-    "  }\n",
-    "\n",
-    "  return  out;\n",
-    "}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# calcula la tendencia de las variables cols de los ultimos 6 meses\n",
-    "# la tendencia es la pendiente de la recta que ajusta por cuadrados minimos\n",
-    "# La funcionalidad de ratioavg es autoria de  Daiana Sparta,  UAustral  2021\n",
-    "\n",
-    "TendenciaYmuchomas <- function(\n",
-    "    dataset, cols, ventana = 6, tendencia = TRUE,\n",
-    "    minimo = TRUE, maximo = TRUE, promedio = TRUE,\n",
-    "    ratioavg = FALSE, ratiomax = FALSE) {\n",
-    "  gc(verbose= FALSE)\n",
-    "  # Esta es la cantidad de meses que utilizo para la historia\n",
-    "  ventana_regresion <- ventana\n",
-    "\n",
-    "  last <- nrow(dataset)\n",
-    "\n",
-    "  # creo el vector_desde que indica cada ventana\n",
-    "  # de esta forma se acelera el procesamiento ya que lo hago una sola vez\n",
-    "  vector_ids <- dataset[ , numero_de_cliente ]\n",
-    "\n",
-    "  vector_desde <- seq(\n",
-    "    -ventana_regresion + 2,\n",
-    "    nrow(dataset) - ventana_regresion + 1\n",
-    "  )\n",
-    "\n",
-    "  vector_desde[1:ventana_regresion] <- 1\n",
-    "\n",
-    "  for (i in 2:last) {\n",
-    "    if (vector_ids[i - 1] != vector_ids[i]) {\n",
-    "      vector_desde[i] <- i\n",
-    "    }\n",
-    "  }\n",
-    "  for (i in 2:last) {\n",
-    "    if (vector_desde[i] < vector_desde[i - 1]) {\n",
-    "      vector_desde[i] <- vector_desde[i - 1]\n",
-    "    }\n",
-    "  }\n",
-    "\n",
-    "  for (campo in cols) {\n",
-    "    nueva_col <- fhistC(dataset[, get(campo)], vector_desde)\n",
-    "\n",
-    "    if (tendencia) {\n",
-    "      dataset[, paste0(campo, \"_tend\", ventana) :=\n",
-    "        nueva_col[(0 * last + 1):(1 * last)]]\n",
-    "    }\n",
-    "\n",
-    "    if (minimo) {\n",
-    "      dataset[, paste0(campo, \"_min\", ventana) :=\n",
-    "        nueva_col[(1 * last + 1):(2 * last)]]\n",
-    "    }\n",
-    "\n",
-    "    if (maximo) {\n",
-    "      dataset[, paste0(campo, \"_max\", ventana) :=\n",
-    "        nueva_col[(2 * last + 1):(3 * last)]]\n",
-    "    }\n",
-    "\n",
-    "    if (promedio) {\n",
-    "      dataset[, paste0(campo, \"_avg\", ventana) :=\n",
-    "        nueva_col[(3 * last + 1):(4 * last)]]\n",
-    "    }\n",
-    "\n",
-    "    if (ratioavg) {\n",
-    "      dataset[, paste0(campo, \"_ratioavg\", ventana) :=\n",
-    "        get(campo) / nueva_col[(3 * last + 1):(4 * last)]]\n",
-    "    }\n",
-    "\n",
-    "    if (ratiomax) {\n",
-    "      dataset[, paste0(campo, \"_ratiomax\", ventana) :=\n",
-    "        get(campo) / nueva_col[(2 * last + 1):(3 * last)]]\n",
-    "    }\n",
-    "  }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "[1] \"2025-11-11 01:03:08 UTC\""
+       "[1] \"2025-11-13 19:52:17 UTC\""
       ]
      },
      "metadata": {},
@@ -1827,57 +1699,23 @@
     }
    ],
    "source": [
-    "# Feature Engineering Historico\n",
-    "# Creacion de LAGs\n",
     "setorder(dataset, numero_de_cliente, foto_mes)\n",
     "\n",
-    "# todo es lagueable, menos la primary key y la clase\n",
-    "cols_lagueables <- copy( setdiff(\n",
-    "  colnames(dataset),\n",
-    "  c(\"numero_de_cliente\", \"foto_mes\", \"clase_ternaria\")\n",
-    "))\n",
+    "if (isTRUE(PARAM$FE_hist$Lags$run)) {\n",
+    "  dataset <- crear_lags(dataset, lags = PARAM$FE_hist$Lags$order)\n",
+    "  message(\"Lags aplicados\")\n",
+    "} else {\n",
+    "  message(\"Lags no aplicados\")\n",
+    "}\n",
     "\n",
-    "# https://rdrr.io/cran/data.table/man/shift.html\n",
-    "\n",
-    "# lags de orden 1\n",
-    "dataset[,\n",
-    "  paste0(cols_lagueables, \"_lag1\") := shift(.SD, 1, NA, \"lag\"),\n",
-    "  by= numero_de_cliente,\n",
-    "  .SDcols= cols_lagueables\n",
-    "]\n",
-    "\n",
-    "# lags de orden 2\n",
-    "dataset[,\n",
-    "  paste0(cols_lagueables, \"_lag2\") := shift(.SD, 2, NA, \"lag\"),\n",
-    "  by= numero_de_cliente,\n",
-    "  .SDcols= cols_lagueables\n",
-    "]\n",
-    "\n",
-    "# agrego los delta lags\n",
-    "for (vcol in cols_lagueables)\n",
-    "{\n",
-    "  dataset[, paste0(vcol, \"_delta1\") := get(vcol) - get(paste0(vcol, \"_lag1\"))]\n",
-    "  dataset[, paste0(vcol, \"_delta2\") := get(vcol) - get(paste0(vcol, \"_lag2\"))]\n",
+    "if (isTRUE(PARAM$FE_hist$DeltaLags$run)) {\n",
+    "  dataset <- crear_delta_lags(dataset, lags = PARAM$FE_hist$DeltaLags$Order)\n",
+    "  message(\"Delta Lags aplicados\")    \n",
+    "} else {\n",
+    "  message(\"Delta Lags no aplicados\")\n",
     "}\n",
     "\n",
     "Sys.time()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parametros de Feature Engineering Historico de Tendencias\n",
-    "PARAM$FE_hist$Tendencias$run <- TRUE\n",
-    "PARAM$FE_hist$Tendencias$ventana <- 6\n",
-    "PARAM$FE_hist$Tendencias$tendencia <- TRUE\n",
-    "PARAM$FE_hist$Tendencias$minimo <- FALSE\n",
-    "PARAM$FE_hist$Tendencias$maximo <- FALSE\n",
-    "PARAM$FE_hist$Tendencias$promedio <- FALSE\n",
-    "PARAM$FE_hist$Tendencias$ratioavg <- FALSE\n",
-    "PARAM$FE_hist$Tendencias$ratiomax <- FALSE"
    ]
   },
   {
@@ -1931,154 +1769,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AgregaVarRandomForest <- function() {\n",
-    "\n",
-    "  cat( \"inicio AgregaVarRandomForest()\\n\")\n",
-    "  gc(verbose= FALSE)\n",
-    "  dataset[, clase01 := 0L ]\n",
-    "  dataset[ clase_ternaria %in% c( \"BAJA+2\", \"BAJA+1\"),\n",
-    "      clase01 := 1L ]\n",
-    "\n",
-    "  campos_buenos <- setdiff(\n",
-    "    colnames(dataset),\n",
-    "    c( \"clase_ternaria\", \"clase01\")\n",
-    "  )\n",
-    "\n",
-    "  dataset[, entrenamiento :=\n",
-    "    as.integer( foto_mes %in% PARAM$FE_rf$train$training )]\n",
-    "\n",
-    "  dtrain <- lgb.Dataset(\n",
-    "    data = data.matrix(dataset[entrenamiento == TRUE, campos_buenos, with = FALSE]),\n",
-    "    label = dataset[entrenamiento == TRUE, clase01],\n",
-    "    free_raw_data = FALSE\n",
-    "  )\n",
-    "\n",
-    "  modelo <- lgb.train(\n",
-    "     data = dtrain,\n",
-    "     param = PARAM$FE_rf$lgb_param,\n",
-    "     verbose = -100\n",
-    "  )\n",
-    "\n",
-    "  cat( \"Fin construccion RandomForest\\n\" )\n",
-    "  # grabo el modelo, achivo .model\n",
-    "  lgb.save(modelo, file=\"modelo.model\" )\n",
-    "\n",
-    "  qarbolitos <- copy(PARAM$FE_rf$lgb_param$num_iterations)\n",
-    "\n",
-    "  periodos <- dataset[ , unique( foto_mes ) ]\n",
-    "\n",
-    "  for( periodo in  periodos )\n",
-    "  {\n",
-    "    cat( \"periodo = \", periodo, \"\\n\" )\n",
-    "    datamatrix <- data.matrix(dataset[ foto_mes== periodo, campos_buenos, with = FALSE])\n",
-    "\n",
-    "    cat( \"Inicio prediccion\\n\" )\n",
-    "    prediccion <- predict(\n",
-    "        modelo,\n",
-    "        datamatrix,\n",
-    "        type = \"leaf\"\n",
-    "    )\n",
-    "    cat( \"Fin prediccion\\n\" )\n",
-    "\n",
-    "    for( arbolito in 1:qarbolitos )\n",
-    "    {\n",
-    "       cat( arbolito, \" \" )\n",
-    "       hojas_arbol <- unique(prediccion[ , arbolito])\n",
-    "\n",
-    "       for (pos in 1:length(hojas_arbol)) {\n",
-    "         # el numero de nodo de la hoja, estan salteados\n",
-    "         nodo_id <- hojas_arbol[pos]\n",
-    "         dataset[ foto_mes== periodo, paste0(\n",
-    "            \"rf_\", sprintf(\"%03d\", arbolito),\n",
-    "             \"_\", sprintf(\"%03d\", nodo_id)\n",
-    "          ) :=  as.integer( nodo_id == prediccion[ , arbolito]) ]\n",
-    "\n",
-    "       }\n",
-    "\n",
-    "       rm( hojas_arbol )\n",
-    "    }\n",
-    "    cat( \"\\n\" )\n",
-    "\n",
-    "    rm( prediccion )\n",
-    "    rm( datamatrix )\n",
-    "    gc(verbose= FALSE)\n",
-    "  }\n",
-    "\n",
-    "  gc(verbose= FALSE)\n",
-    "\n",
-    "  # borro clase01 , no debe ensuciar el dataset\n",
-    "  dataset[ , clase01 := NULL ]\n",
-    "\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parametros de Feature Engineering  a partir de hojas de Random Forest\n",
-    "\n",
-    "# Estos CUATRO parametros son los que se deben modificar\n",
-    "PARAM$FE_rf$arbolitos= 20\n",
-    "PARAM$FE_rf$hojas_por_arbol= 16\n",
-    "PARAM$FE_rf$datos_por_hoja= 100\n",
-    "PARAM$FE_rf$mtry_ratio= 0.2\n",
-    "\n",
-    "# Estos son quasi fijos\n",
-    "PARAM$FE_rf$train$training <- c( 202101, 202102, 202103)\n",
-    "\n",
-    "# Estos TAMBIEN son quasi fijos\n",
-    "PARAM$FE_rf$lgb_param <-list(\n",
-    "    # parametros que se pueden cambiar\n",
-    "    num_iterations = PARAM$FE_rf$arbolitos,\n",
-    "    num_leaves  = PARAM$FE_rf$hojas_por_arbol,\n",
-    "    min_data_in_leaf = PARAM$FE_rf$datos_por_hoja,\n",
-    "    feature_fraction_bynode  = PARAM$FE_rf$mtry_ratio,\n",
-    "\n",
-    "    # para que LightGBM emule Random Forest\n",
-    "    boosting = \"rf\",\n",
-    "    bagging_fraction = ( 1.0 - 1.0/exp(1.0) ),\n",
-    "    bagging_freq = 1.0,\n",
-    "    feature_fraction = 1.0,\n",
-    "\n",
-    "    # genericos de LightGBM\n",
-    "    max_bin = 31L,\n",
-    "    objective = \"binary\",\n",
-    "    first_metric_only = TRUE,\n",
-    "    boost_from_average = TRUE,\n",
-    "    feature_pre_filter = FALSE,\n",
-    "    force_row_wise = TRUE,\n",
-    "    verbosity = -100,\n",
-    "    max_depth = -1L,\n",
-    "    min_gain_to_split = 0.0,\n",
-    "    min_sum_hessian_in_leaf = 0.001,\n",
-    "    lambda_l1 = 0.0,\n",
-    "    lambda_l2 = 0.0,\n",
-    "\n",
-    "    pos_bagging_fraction = 1.0,\n",
-    "    neg_bagging_fraction = 1.0,\n",
-    "    is_unbalance = FALSE,\n",
-    "    scale_pos_weight = 1.0,\n",
-    "\n",
-    "    drop_rate = 0.1,\n",
-    "    max_drop = 50,\n",
-    "    skip_drop = 0.5,\n",
-    "\n",
-    "    extra_trees = FALSE\n",
-    "  )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Feature Engineering agregando variables de Random Forest\n",
     "#  aqui es donde se hace el trabajo\n",
-    "AgregaVarRandomForest()\n",
+    "agregar_var_rf(PARAM)\n",
     "\n",
     "Sys.time()"
    ]
