feats historicas specs

--- a/src/churn/C2010/APO_zlgbm_C2010_2106.ipynb
+++ b/src/churn/C2010/APO_zlgbm_C2010_2106.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -126,6 +126,8 @@
       "\n",
       "Sourcing: crear_proporcion.R\n",
       "\n",
+      "Sourcing: features_historicos.R\n",
+      "\n",
       "Sourcing: interpolar_faltantes.R\n",
       "\n",
       "Sourcing: lags.R\n",
@@ -133,6 +135,8 @@
       "Sourcing: normalizar_ctrx_quarter.R\n",
       "\n",
       "Sourcing: print_utils.R\n",
+      "\n",
+      "Sourcing: run_features_historicas.R\n",
       "\n",
       "Sourcing: tendencias_y_mas.R\n",
       "\n",
@@ -1832,27 +1836,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creando lags: \n",
+      "Creando lags: 1, 2\n",
       "\n",
-      "✅ Lags creados: 0\n",
+      "✅ Lags creados: 354\n",
       "\n",
       "Creando delta-lags: 1, 2\n",
       "\n",
-      "✅ Delta-lags creados: 0\n",
+      "✅ Delta-lags creados: 354\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[1] \"2025-11-13 20:23:28 UTC\""
+       "[1] \"2025-11-13 20:29:07 UTC\""
       ]
      },
      "metadata": {},
@@ -2453,9 +2457,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sourcing: add_divisiones.R\n",
+      "\n",
+      "Sourcing: add_ratio.R\n",
+      "\n",
+      "Sourcing: agregar_clase_ternaria.R\n",
+      "\n",
+      "Sourcing: agregar_var_rf.R\n",
+      "\n",
+      "Sourcing: aplicar_dataquality_zeros.R\n",
+      "\n",
+      "Sourcing: apply_sum_specs_multi.R\n",
+      "\n",
+      "Sourcing: audit_nullear.R\n",
+      "\n",
+      "Sourcing: build_variables_rotas.R\n",
+      "\n",
+      "Sourcing: crear_proporcion.R\n",
+      "\n",
+      "Sourcing: interpolar_faltantes.R\n",
+      "\n",
+      "Sourcing: lags.R\n",
+      "\n",
+      "Sourcing: normalizar_ctrx_quarter.R\n",
+      "\n",
+      "Sourcing: print_utils.R\n",
+      "\n",
+      "Sourcing: tendencias_y_mas.R\n",
+      "\n",
+      "Sourcing: ver_meses_rotos.R\n",
+      "\n",
+      "✅ Todas las funciones fueron cargadas correctamente.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "source(file.path(PARAM$paths$functions, \"index.R\"))\n",
+    "source_functions(PARAM$paths$functions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1065"
+      ],
+      "text/latex": [
+       "1065"
+      ],
+      "text/markdown": [
+       "1065"
+      ],
+      "text/plain": [
+       "[1] 1065"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-13 20:31:34 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# aqui se agregan las tendencias de los ultimos 6 meses\n",
     "\n",
@@ -2463,7 +2544,7 @@
     "setorder(dataset, numero_de_cliente, foto_mes)\n",
     "\n",
     "if( PARAM$FE_hist$Tendencias$run) {\n",
-    "    TendenciaYmuchomas(dataset,\n",
+    "    tendencias_y_mas(dataset,\n",
     "    cols = cols_lagueables,\n",
     "    ventana = PARAM$FE_hist$Tendencias$ventana, # 6 meses de historia\n",
     "    tendencia = PARAM$FE_hist$Tendencias$tendencia,\n",
@@ -2477,6 +2558,52 @@
     "\n",
     "ncol(dataset)\n",
     "Sys.time()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variables adicionales historicas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Variable: mrentabilidad | win: 12 | ops: mean, sd, cv, p90, range\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in frollmean(get(var), n = win, align = \"right\", na.rm = TRUE, adaptive = FALSE, : unused argument (min_obs = min_obs)\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in frollmean(get(var), n = win, align = \"right\", na.rm = TRUE, adaptive = FALSE, : unused argument (min_obs = min_obs)\nTraceback:\n",
+      "1. roll_mean_by(dt, var, id_col, time_col, win, suffix, min_obs)",
+      "2. dt[, `:=`((newn), frollmean(get(var), n = win, align = \"right\", \n .     na.rm = TRUE, adaptive = FALSE, min_obs = min_obs)), by = c(id_col)]",
+      "3. `[.data.table`(dt, , `:=`((newn), frollmean(get(var), n = win, \n .     align = \"right\", na.rm = TRUE, adaptive = FALSE, min_obs = min_obs)), \n .     by = c(id_col))",
+      "4. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"unused argument (min_obs = min_obs)\", base::quote(frollmean(get(var), \n .     n = win, align = \"right\", na.rm = TRUE, adaptive = FALSE, \n .     min_obs = min_obs)))"
+     ]
+    }
+   ],
+   "source": [
+    "spec_hist <- fread(PARAM$FE_hist$spechistoricas) # maneja bien las comillas por defecto\n",
+    "\n",
+    "# dt es tu data.table con numero_de_cliente, foto_mes, etc.\n",
+    "dataset <- apply_rolling_from_specs(\n",
+    "                        dt = dataset, \n",
+    "                        specs = spec_hist,\n",
+    "                        id_col   = \"numero_de_cliente\",\n",
+    "                        time_col = \"foto_mes\",\n",
+    "                        suffix   = \"m\",\n",
+    "                        min_obs  = 1)\n"
    ]
   },
   {
