--- a/src/churn/C2020/apo-501.ipynb
+++ b/src/churn/C2020/apo-501.ipynb
@@ -409,9 +409,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in fread(PARAM$FE_intrames$specsumas): File '/home/vickydiliscia/dmeyf2025/src/churn/C2020/featurespecs/spec_sumas.csv' does not exist or is non-readable. getwd()=='/home/vickydiliscia/buckets/b1/exp/APO2020-202106'\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in fread(PARAM$FE_intrames$specsumas): File '/home/vickydiliscia/dmeyf2025/src/churn/C2020/featurespecs/spec_sumas.csv' does not exist or is non-readable. getwd()=='/home/vickydiliscia/buckets/b1/exp/APO2020-202106'\nTraceback:\n",
+      "1. stopf(\"File '%s' does not exist or is non-readable. getwd()=='%s'\", \n .     file, getwd())",
+      "2. raise_condition(stop, gettextf(fmt, ..., domain = domain), c(class, \n .     \"simpleError\", \"error\", \"condition\"))",
+      "3. signal(obj)"
+     ]
+    }
+   ],
    "source": [
     "spec_sumas <- fread(PARAM$FE_intrames$specsumas)\n",
     "\n",
