agregar cols lagueables

--- a/src/churn/C2020/apo-501.ipynb
+++ b/src/churn/C2020/apo-501.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -409,19 +409,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in fread(PARAM$FE_intrames$specsumas): File '/home/vickydiliscia/dmeyf2025/src/churn/C2020/featurespecs/spec_sumas.csv' does not exist or is non-readable. getwd()=='/home/vickydiliscia/buckets/b1/exp/APO2020-202106'\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in fread(PARAM$FE_intrames$specsumas): File '/home/vickydiliscia/dmeyf2025/src/churn/C2020/featurespecs/spec_sumas.csv' does not exist or is non-readable. getwd()=='/home/vickydiliscia/buckets/b1/exp/APO2020-202106'\nTraceback:\n",
-      "1. stopf(\"File '%s' does not exist or is non-readable. getwd()=='%s'\", \n .     file, getwd())",
-      "2. raise_condition(stop, gettextf(fmt, ..., domain = domain), c(class, \n .     \"simpleError\", \"error\", \"condition\"))",
-      "3. signal(obj)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "✅ 'mtarjeta_total_consumo' = suma_segura(mtarjeta_visa_consumo+mtarjeta_master_consumo)\n",
+      "\n",
+      "✅ 'mtarjeta_total_debitos_automaticos' = suma_segura(mttarjeta_visa_debitos_automaticos+mttarjeta_master_debitos_automaticos)\n",
+      "\n",
+      "✅ 'mfinanciacionlimite_total' = suma_segura(Master_mfinanciacion_limite+Visa_mfinanciacion_limite)\n",
+      "\n",
+      "✅ 'msaldopesos_total' = suma_segura(Master_msaldopesos+Visa_msaldopesos)\n",
+      "\n",
+      "✅ 'msaldodolares_total' = suma_segura(Master_msaldodolares+Visa_msaldodolares)\n",
+      "\n",
+      "✅ 'mconsumopesos_total' = suma_segura(Master_mconsumospesos+Visa_mconsumospesos)\n",
+      "\n",
+      "✅ 'mconsumodolares_total' = suma_segura(Master_mconsumosdolares+Visa_mconsumosdolares)\n",
+      "\n",
+      "✅ 'mlimitecompra_total' = suma_segura(Master_mlimitecompra+Visa_mlimitecompra)\n",
+      "\n",
+      "✅ 'madelantopesos_total' = suma_segura(Master_madelantopesos+Visa_madelantopesos)\n",
+      "\n",
+      "✅ 'madelantodolares_total' = suma_segura(Master_madelantodolares+Visa_madelantodolares)\n",
+      "\n",
+      "✅ 'mpagado_total' = suma_segura(Master_mpagado+Visa_mpagado)\n",
+      "\n",
+      "✅ 'mpagopesos_total' = suma_segura(Master_mpagospesos+Visa_mpagospesos)\n",
+      "\n",
+      "✅ 'mpagosdolares_total' = suma_segura(Master_mpagosdolares+Visa_mpagosdolares)\n",
+      "\n",
+      "✅ 'msaldototal_total' = suma_segura(Master_msaldototal+Visa_msaldototal)\n",
+      "\n",
+      "✅ 'mconsumototal_total' = suma_segura(Master_mconsumototal+Visa_mconsumototal)\n",
+      "\n",
+      "✅ 'cconsumos_total' = suma_segura(Master_cconsumos+Visa_cconsumos)\n",
+      "\n",
+      "✅ 'delinquency_total' = suma_segura(Master_delinquency+Visa_delinquency)\n",
+      "\n",
+      "✅ 'mplazofijo_total' = suma_segura(mplazo_fijo_dolares+mplazo_fijo_pesos)\n",
+      "\n",
+      "✅ 'mpayroll_total' = suma_segura(mpayroll+mpayroll2)\n",
+      "\n",
+      "✅ 'minversion1_total' = suma_segura(minversion1_dolares+minversion1_pesos)\n",
+      "\n",
+      "✅ 'cpayroll_total' = suma_segura(cpayroll_trx+cpayroll2_trx)\n",
+      "\n",
+      "✅ 'cseguros_total' = suma_segura(cseguro_vida+cseguro_auto+cseguro_vivienda+cseguro_accidentes_personales)\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-15 16:28:43 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -470,13 +518,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creando lags: 1, 2\n",
+      "\n",
+      "✅ Lags creados: 350\n",
+      "\n",
+      "Creando delta-lags: 1, 2\n",
+      "\n",
+      "✅ Delta-lags creados: 350\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[1] \"2025-11-13 05:21:56 UTC\""
+       "[1] \"2025-11-15 16:30:04 UTC\""
       ]
      },
      "metadata": {},
@@ -506,6 +568,157 @@
    "metadata": {},
    "source": [
     "#### Tendencias 6 meses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "875"
+      ],
+      "text/latex": [
+       "875"
+      ],
+      "text/markdown": [
+       "875"
+      ],
+      "text/plain": [
+       "[1] 875"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'active_quarter'</li><li>'cliente_vip'</li><li>'internet'</li><li>'cliente_edad'</li><li>'cliente_antiguedad'</li><li>'mrentabilidad'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'active\\_quarter'\n",
+       "\\item 'cliente\\_vip'\n",
+       "\\item 'internet'\n",
+       "\\item 'cliente\\_edad'\n",
+       "\\item 'cliente\\_antiguedad'\n",
+       "\\item 'mrentabilidad'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'active_quarter'\n",
+       "2. 'cliente_vip'\n",
+       "3. 'internet'\n",
+       "4. 'cliente_edad'\n",
+       "5. 'cliente_antiguedad'\n",
+       "6. 'mrentabilidad'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"active_quarter\"     \"cliente_vip\"        \"internet\"          \n",
+       "[4] \"cliente_edad\"       \"cliente_antiguedad\" \"mrentabilidad\"     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 5 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>numero_de_cliente</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>249221323</td><td>32</td></tr>\n",
+       "\t<tr><td>249227600</td><td>32</td></tr>\n",
+       "\t<tr><td>249227813</td><td>17</td></tr>\n",
+       "\t<tr><td>249231391</td><td>24</td></tr>\n",
+       "\t<tr><td>249234235</td><td>15</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 5 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " numero\\_de\\_cliente & N\\\\\n",
+       " <int> & <int>\\\\\n",
+       "\\hline\n",
+       "\t 249221323 & 32\\\\\n",
+       "\t 249227600 & 32\\\\\n",
+       "\t 249227813 & 17\\\\\n",
+       "\t 249231391 & 24\\\\\n",
+       "\t 249234235 & 15\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 5 × 2\n",
+       "\n",
+       "| numero_de_cliente &lt;int&gt; | N &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| 249221323 | 32 |\n",
+       "| 249227600 | 32 |\n",
+       "| 249227813 | 17 |\n",
+       "| 249231391 | 24 |\n",
+       "| 249234235 | 15 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  numero_de_cliente N \n",
+       "1 249221323         32\n",
+       "2 249227600         32\n",
+       "3 249227813         17\n",
+       "4 249231391         24\n",
+       "5 249234235         15"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 1) ¿Es data.table?\n",
+    "is.data.table(dataset)\n",
+    "\n",
+    "# 2) ¿Qué columnas está intentando laguear?\n",
+    "id_col <- \"numero_de_cliente\"; time_col <- \"foto_mes\"\n",
+    "exclude <- c(\"clase_ternaria\")\n",
+    "\n",
+    "cols_lagueables <- setdiff(names(dataset), c(id_col, time_col, exclude))\n",
+    "length(cols_lagueables); head(cols_lagueables)\n",
+    "\n",
+    "# 3) ¿Hay más de un registro por cliente (si no, los lags serían todo NA)?\n",
+    "dataset[, .N, by = id_col][N > 1L][1:5]"
    ]
   },
   {
