--- a/src/churn/C2020/APO-C2020-202106.ipynb
+++ b/src/churn/C2020/APO-C2020-202106.ipynb
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1] \"2025-11-15 17:28:31 UTC\""
+       "[1] \"2025-11-15 19:37:02 UTC\""
       ]
      },
      "metadata": {},
@@ -39,8 +39,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td> 658553</td><td>35.2</td><td>1454648</td><td>77.7</td><td>1122387</td><td>60.0</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>1222216</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975146</td><td>15.1</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td>  2011948</td><td> 107.5</td><td>    3731664</td><td>  199.3</td><td>    3731664</td><td>  199.3</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>320635630</td><td>2446.3</td><td>12672407624</td><td>96682.8</td><td>10842983720</td><td>82725.5</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -49,8 +49,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &  658553 & 35.2 & 1454648 & 77.7 & 1122387 & 60.0\\\\\n",
-       "\tVcells & 1222216 &  9.4 & 8388608 & 64.0 & 1975146 & 15.1\\\\\n",
+       "\tNcells &   2011948 &  107.5 &     3731664 &   199.3 &     3731664 &   199.3\\\\\n",
+       "\tVcells & 320635630 & 2446.3 & 12672407624 & 96682.8 & 10842983720 & 82725.5\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -59,14 +59,14 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |  658553 | 35.2 | 1454648 | 77.7 | 1122387 | 60.0 |\n",
-       "| Vcells | 1222216 |  9.4 | 8388608 | 64.0 | 1975146 | 15.1 |\n",
+       "| Ncells |   2011948 |  107.5 |     3731664 |   199.3 |     3731664 |   199.3 |\n",
+       "| Vcells | 320635630 | 2446.3 | 12672407624 | 96682.8 | 10842983720 | 82725.5 |\n",
        "\n"
       ],
       "text/plain": [
-       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-       "Ncells  658553 35.2 1454648    77.7 1122387  60.0\n",
-       "Vcells 1222216  9.4 8388608    64.0 1975146  15.1"
+       "       used      (Mb)   gc trigger  (Mb)    max used    (Mb)   \n",
+       "Ncells   2011948  107.5     3731664   199.3     3731664   199.3\n",
+       "Vcells 320635630 2446.3 12672407624 96682.8 10842983720 82725.5"
       ]
      },
      "metadata": {},
